Bug 1686816 - use AppendFloat to fix floating point separator issues with the slow script warning probe in localized environments, r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D101852